# api_final_yatube

./: Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tests/: conftest.py
yatube_api/: manage.py  schema.yml
yatube_api/api/: permissions.py  serializers.py  views.py
yatube_api/api/urls/: v1.py
yatube_api/posts/: admin.py  models.py
yatube_api/posts/migrations/: 0002_auto_20230422_1702.py  0003_rename_author_follow_following.py  0004_auto_20230427_1352.py
yatube_api/yatube_api/: models.py  settings.py  urls.py  utils.py
